@@ -10,6 +10,7 @@ xine-lib (1.1.15) 2008-??-??
     - Delay preallocating video frames until we know how large they'll be
     - Only try and set the tuner if we're going to use it. Setting the tuner
       when using baseband video (CVBS, S-Video) breaks the input.
+  * Fix crashes with fuzzed Windows Media files.
 
 xine-lib (1.1.14) 2008-06-29
   * DVB changes:
